--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -1,30 +1,57 @@
-# Use the nl80211 driver with the brcmfmac driver
-driver=nl80211
-
-# Use the 2.4GHz band
+# hostapd configuration starts here
+ctrl_interface=/var/run/hostapd
+ctrl_interface_group=0
+interface=wlo1
+ssid=SkyNet
+channel=4
+beacon_int=100
+# (hardware limit for some wireless chipsets)
+max_num_sta=8
 hw_mode=g
-
-# Enable 802.11n
+# we use 802.11n (wifi N)
 ieee80211n=1
-
-# Enable WMM
-wmm_enabled=1
-
-# Enable 40MHz channels with 20ns guard interval
-ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
-
-# Bit field: 1=wpa, 2=wep, 3=both
-auth_algs=1
-
-# Use WPA2
+wme_enabled=1
+ht_capab=[SHORT-GI-20][SHORT-GI-40][HT40+]
+# We use WPA2 of course
 wpa=2
-
-# Use a pre-shared key
+wpa_passphrase=passwordAChanger
 wpa_key_mgmt=WPA-PSK
-
-# Use AES, instead of TKIP
-rsn_pairwise=CCMP
-
-# hostapd event logger configuration
+# Note: TKIP not supported with RTL8188RU chip!
+wpa_pairwise=CCMP
+wpa_group_rekey=86400
+# other settings
+logger_syslog=-1
+logger_syslog_level=2
 logger_stdout=-1
 logger_stdout_level=2
+#dump_file=/tmp/hostapd.dump
+dtim_period=2
+rts_threshold=2347
+fragm_threshold=2346
+macaddr_acl=0
+auth_algs=3
+ignore_broadcast_ssid=0
+wmm_enabled=1
+wmm_ac_bk_cwmin=4
+wmm_ac_bk_cwmax=10
+wmm_ac_bk_aifs=7
+wmm_ac_bk_txop_limit=0
+wmm_ac_bk_acm=0
+wmm_ac_be_aifs=3
+wmm_ac_be_cwmin=4
+wmm_ac_be_cwmax=10
+wmm_ac_be_txop_limit=0
+wmm_ac_be_acm=0
+wmm_ac_vi_aifs=2
+wmm_ac_vi_cwmin=3
+wmm_ac_vi_cwmax=4
+wmm_ac_vi_txop_limit=94
+wmm_ac_vi_acm=0
+wmm_ac_vo_aifs=2
+wmm_ac_vo_cwmin=2
+wmm_ac_vo_cwmax=3
+wmm_ac_vo_txop_limit=47
+wmm_ac_vo_acm=0
+eapol_key_index_workaround=0
+eap_server=0
+own_ip_addr=127.0.0.1
