--- a/hassio-access-point/hostapd.conf
+++ b/hassio-access-point/hostapd.conf
@@ -1,8 +1,8 @@
 # hostapd configuration starts here
 ctrl_interface=/var/run/hostapd
 ctrl_interface_group=0
-interface=wlo1
-ssid=SkyNet
+interface=wlp2s0
+ssid=HomeAssistant
 channel=4
 beacon_int=100
 # (hardware limit for some wireless chipsets)
